Fix text wrapping.

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -25,6 +25,7 @@ body {
   padding: 0;
   background-color: white;
   width:100%;
+  word-wrap: break-word;
 }
 
 .ga-logo {
@@ -236,18 +237,6 @@ ul.user-details li {
   font-family: $font-button;
   border-radius: 3px;
 }
-
-// #answer-submit {
-//   text-align: center;
-//   box-shadow: 0 3px 0 0 $color-deep-red;
-//   color: white;
-//   background-color: $color-red;
-//   font-size: 0.8rem;
-//   padding: 0.2rem 0.5rem; 
-//   font-family: $font-button;
-//   border-radius: 3px;
-// }
-
 
 #question-comments-btn, #answer-comments-btn {
   text-align: center;
